# paper-2021-ADTW

./: CMakeLists.txt  LICENSE  README.md  main.cpp
results/: adtw-10_results.csv  adtw-1_results.csv  adtw-2_results.csv  adtw-3_results.csv  adtw-4_results.csv  adtw-5_results.csv  adtw-6_results.csv  adtw-7_results.csv  adtw-8_results.csv  adtw-9_results.csv
src/: main.cpp
